[package]
name = "kaeo"
version = "1.0.1"
edition = "2024"
authors = ["Pascal Perrenoud <pascal@pband.ch>"]
description = "Keep an Eye on files and folder, run a command when one changes"
documentation = "https://docs.rs/kaeo"
readme = "./README.md"
repository = "https://github.com/MrDaves24/kaeo"
license = "MIT"
keywords = ["watch", "notify", "tool", "util", "cli"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
ctrlc = { version = "3.5", features = ["termination"] }
gethostname = "1.1"
notify-debouncer-full = "0.7"
shlex = "1.3"

[profile.release]
lto = "thin"
codegen-units = 1
